--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
     <groupId>uk.co.benskin</groupId>
     <artifactId>graphql_spring_boot_tutorial</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+<!--    <packaging>war</packaging>-->
+    <packaging>jar</packaging>
 
     <name>graphql_spring_boot_tutorial</name>
     <description>Learn how to build a graphql spring boot based java service</description>
@@ -14,7 +15,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.2.RELEASE</version>
+        <version>2.0.3.RELEASE</version>
         <relativePath/>
     </parent>
 
@@ -25,11 +26,11 @@
     </properties>
 
     <dependencies>
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
             <scope>provided</scope>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -68,7 +69,7 @@
         </dependency>
     </dependencies>
     
-    <build>
+<!--    <build>
         <finalName>${artifactId}</finalName>
         <plugins>
             <plugin>
@@ -91,6 +92,6 @@
                 </executions>
             </plugin>
         </plugins>
-    </build>
+    </build>-->
     
 </project>
